[package]
name = "pubsub-server"
version = "0.1.0"
edition = "2021"
authors = ["Andriy Mykhaylyshyn <andriy.mykhaylyshyn@sigma.software>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
clap = { version = "3", features = ["derive"] }
tokio = { version = "1.15", features = ["macros", "rt-multi-thread", "net", "sync"] }
tokio-tungstenite = "0.16"
parking_lot = "0.11"
shrinkwraprs = "0.3"
