[package]
name = "pubsub-server"
version = "0.1.0"
edition = "2021"
authors = ["Andriy Mykhaylyshyn <andriy.mykhaylyshyn@sigma.software>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
url = "2.2"
clap = { version = "3", features = ["derive"] }
tokio = { version = "1.15", features = ["macros", "rt-multi-thread", "net", "sync", "signal"] }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
tokio-tungstenite = "0.16"
parking_lot = "0.11"
futures = "0.3"
jsonwebtoken = "8.0"
serde = "1"
serde_qs = "0.8"
serde_json = "1"
pin-project= "1"
redis = { version = "0.21", features = ["aio", "tokio-comp"] }
actix-web = "4.0.0-rc.3"
actix-web-httpauth = "0.6.0-beta.8"
